--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -4,25 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Titanic dataset analysis\n",
-    "\n",
-    "<b> Variable -->\tDefinition </b>\n",
-    "\n",
-    "survival -->\tSurvival (0 = No, 1 = Yes)\n",
-    "\n",
-    "pclass -->\t    Ticket class (A proxy for socio-economic status)  -- (1 = 1st/Upper, 2 = 2nd/Middle, 3 = 3rd/Lower)\n",
-    "\n",
-    "sex\t-->        Gender\t\n",
-    "\n",
-    "Age\t   -->     Age in years\t\n",
-    "\n",
-    "sibsp\t -->   # of siblings / spouses aboard the Titanic\t\n",
-    "\n",
-    "parch\t-->    # of parents / children aboard the Titanic\t\n",
-    "\n",
-    "fare -->\t    Passenger fare\t\n",
-    "\n",
-    "embarked --> Port of Embarkation\tC = Cherbourg, Q = Queenstown, S = Southampton"
+    "# Titanic Dataset Analysis and Visualization"
    ]
   },
   {
